    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="19dp"
                android:contentDescription="@string/terms"
                android:src="@drawable/ic_menu_show_list" />

            <ImageView
                android:id="@+id/wirelogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/logo"
                android:src="@drawable/wiresuplogo" />

        </RelativeLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="364dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
 		android:id="@+id/login"
        android:hint="@string/login" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/validate"
        android:text="@string/validate" />
<!-- 
	Max :Test lancement d'une mapview
    <Button
        android:id="@+id/mapview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapview" />
 -->
</LinearLayout>


	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="right"
	    >


		<TextView
		    android:id="@+id/help"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/help"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    
		     />
	    
	</LinearLayout>
		
</LinearLayout>